Bug 1596904 - handle data race for mReceivedStop, r=robwu,mixedpuppy

Move the EmitStopRequest check to main thread to avoid race condition.
OnDataAvailable is promised to be received before OnStopRequest, so
it needs not to check if we need to emit OnStopRequest.

Differential Revision: https://phabricator.services.mozilla.com/D82472